<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Gambeta</string>
    <string name="accept">Aceptar</string>
    <string name="txt_date_and_hour">Date and hour</string>
    <string name="txt_address">Address</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>

    <string name="login_menu_item">Log in</string>
    <string name="verified_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="unverified_profile">My Profile (Unverified)</string>
    <string name="settings">Settings</string>
    <string name="logout_menu_item">Sign out</string>
    <string name="welcome_user_signed">Congratulations! you have successfully signed in.</string>
    <string name="welcome_no_user_signed">No user signed in currently.</string>
    <string name="login_failed">Log in cancelled!</string>
    <string name="login_success">Log in successful.</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="logout_failed">Failed to log out</string>
    <string name="login_unknown_Error">Unknown error while logging in. Please Try again</string>
    <string name="no_connectivity">There is no internet connection. Please try again</string>
    <string name="player_nick_name">Apodo</string>
    <string name="player_name">Nombre: </string>
    <string name="player_contact_number">Numero: </string>
    <string name="players">Players:</string>
    <string name="addPlayer">Agregar jugador</string>
    <string name="add_from_contacts">Agregar desde libreta</string>
</resources>
